Улучшен инструмент редактирования: добавлен умный поиск (fuzzy match), устойчивый к ошибкам в пробелах и переносах строк